# BMS-LIB

./: .gitignore  .project
BMS-LIB/: .cproject  .project  CMakeLists.txt  compile_commands.json
BMS-LIB/.cache/clangd/index/: BMS-LIB.hpp.A3750E234A219B38.idx  BMS.hpp.25F497FD6A3CBCA9.idx  BMSA.hpp.3CC30593ADA63734.idx  BMSH.hpp.F7671B54E6B90383.idx  Battery.hpp.8363E50450DC3B91.idx  Cell.hpp.463F697C6563112B.idx  LTC6810.hpp.F8463C09E65652AC.idx  LTC6811.hpp.CBB93750EDEB6319.idx  LTC681X.hpp.EB00BEB10F2E6AAD.idx  PEC15.hpp.1C915826412F3453.idx  SOC.hpp.DE4ECC8091173D5A.idx
BMS-LIB/Debug/: makefile  objects.list  sources.mk
BMS-LIB/Debug/Drivers/CMSIS/Device/ST/STM32H7xx/Source/Templates/: subdir.mk  system_stm32h7xx.d
BMS-LIB/Debug/Src/: BMS-LIB.d  BMS-LIB.su  subdir.mk
BMS-LIB/Debug/Src/LTC681x/: LTC681x.d  LTC681x.su  subdir.mk
BMS-LIB/Inc/: BMS-LIB.hpp
BMS-LIB/Inc/BMSA/: BMSA.hpp
BMS-LIB/Inc/BMSH/: BMSH.hpp
BMS-LIB/Inc/LTC6811/: LTC6811.hpp
BMS-LIB/Inc/LTC681x/: LTC681X.hpp
BMS-LIB/Inc/Models/BMS/: BMS.hpp
BMS-LIB/Inc/Models/Battery/: Battery.hpp
BMS-LIB/Inc/Models/Cell/: Cell.hpp
BMS-LIB/Inc/Models/ChargingStateMachine/: ChargingStateMachine.hpp
BMS-LIB/Inc/Models/LTC6810/: LTC6810.hpp
BMS-LIB/Inc/Models/LTC6811/: LTC6811.hpp
BMS-LIB/Inc/Models/LTC681X/: LTC681X.hpp
BMS-LIB/Inc/Models/PEC15/: PEC15.hpp
BMS-LIB/Inc/Models/SOC/: SOC.hpp
BMS-LIB/Src/: BMS-LIB.cpp
BMS-LIB/Src/BMSA/: BMSA.cpp
BMS-LIB/Src/BMSH/: BMSH.cpp
BMS-LIB/Src/LTC6811/: LTC6811.cpp
BMS-LIB/Src/LTC681x/: LTC681x.cpp
BMS-LIB/Src/Models/BMS/: BMS.code-workspace  BMS.cpp
BMS-LIB/Src/Models/Battery/: Battery.cpp
BMS-LIB/Src/Models/ChargingStateMachine/: ChargingStateMachine.cpp
BMS-LIB/Src/Models/LTC6810/: LTC6810.cpp
BMS-LIB/Src/Models/LTC6811/: LTC6811.cpp
BMS-LIB/Src/Models/LTC681X/: LTC681X.cpp
BMS-LIB/Src/Models/PEC15/: PEC15.cpp
BMS-LIB/Src/Models/SOC/: SOC.cpp
BMS-LIB/tools/: build.py
Waveforms_Test/: BMSH_Test.dwf3script  default.dwf3work
